k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress

spec:
  rules:
    - host: scoresys.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              serviceName: api-service
              servicePort: 8081
          - path: /
            pathType: Prefix
            backend:
              serviceName: front-service
              servicePort: 80
